--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>Airbnbでお家、アパート、お部屋をシェアしよう</title>
+    <title>Airbnbでお家、アパート、お部屋をシェアしようね</title>
     <link rel = "icon" href="favicon.PNG">
     <meta name="description" content="賢司のポートフォリオサイトです。" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
